use custom material repo to fix issue with md-chips

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://material.angularjs.org",
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular/material.git"
+    "url": "git://github.com/amitevski/material.git"
   },
   "licenses": [
     {
